--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
             android:name="com.google.android.wearable.standalone"
             android:value="false" />
 
-        <service android:name=".presentation.frameworks.helper.DataLayerListenerService" android:exported="true" tools:ignore="ExportedService" >
+        <service android:name=".presentation.frameworks.helper.DataLayerListenerService"
+            android:exported="true"
+            tools:ignore="ExportedService" >
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
                 <data
@@ -38,6 +40,26 @@
                 <data android:scheme="wear" android:host="*"
                     android:path="/start-activity" />
             </intent-filter>
+        </service>
+
+        <service android:name=".complication.helper.ComplicationDataSourceService"
+            android:exported="true"
+            android:icon="@drawable/ic_main"
+            android:label="@string/app_name"
+            android:permission="com.google.android.wearable.permission.BIND_COMPLICATION_PROVIDER">
+
+            <intent-filter>
+                <action android:name="android.support.wearable.complications.ACTION_COMPLICATION_UPDATE_REQUEST"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.support.wearable.complications.SUPPORTED_TYPES"
+                android:value="SHORT_TEXT, RANGED_VALUE"/>
+
+            <meta-data
+                android:name="android.support.wearable.complications.UPDATE_PERIOD_SECONDS"
+                android:value="600" />
+
         </service>
 
         <activity
