feat: Settings, fix: App terminated when you have not data file

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
 
         <service android:name=".complication.helper.ComplicationDataSourceService"
             android:exported="true"
-            android:icon="@drawable/ic_main"
+            android:icon="@drawable/ic_complication"
             android:label="@string/app_name"
             android:permission="com.google.android.wearable.permission.BIND_COMPLICATION_PROVIDER">
 
