module: create widget module

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ navigation-compose = "2.7.7"
 coil-compose = "2.5.0"
 lifecycleRuntimeKtx = "2.7.0"
 gson = "2.10.1"
+glance = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -73,6 +74,7 @@ androidx-credentials = { group = "androidx.credentials", name = "credentials", v
 androidx-play-services-auth = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "googleCredentials"}
 google-id = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleId"}
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+glance = { group = "androidx.glance", name = "glance-appwidget", version.ref="glance"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
